PersonalDevOrg/force-app/main/default/objects/Student__c/fields/Fathers_name__c.field-meta.xml
<CustomField>
    <fullName>Fathers_name__c</fullName>
    <label>Fathers name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>