PersonalDevOrg/force-app/main/default/objects/Student__c/fields/phone_no__c.field-meta.xml
<CustomField>
    <fullName>phone_no__c</fullName>
    <label>phone no</label>
    <type>Phone</type>
</CustomField>